# Prompt-Engine

./: .gitignore  MVP_GENERATION_PROMPT.md  README.md
backend/: SETUP.md  env_exampl.txt  main.py  pyproject.toml
backend/agents/: coach_agent.py  refiner_agent.py
backend/agents/tools/: coach_tools.py  refinement_tools.py
backend/app/: .env_example  generate_graph_png.py  pyproject.toml  refiner_integrated_graph.mmd
backend/app/agents/: coach_agent.py  grammar_agent.py  refiner_agent.py  tools.py
backend/app/agents/tools/: coach_tools.py  refinement_tools.py
backend/app/api/: prompt_coach.py  routes.py
backend/app/fastApi/: prompt_refiner.py
backend/app/graphs/: coach.ipynb  refiner.ipynb
backend/app/models/: coachRequest.py  coachResponse.py  evaluation.py  grammarResult.py
backend/app/tests/: coach_nodes.py  streamlit_refiner_app.py  streamlite_app.py  test_coach_agent.py  test_grammar_agent.py  test_refiner_agent.py
backend/app/tests/chroma_db/: chroma.sqlite3
backend/chroma_db/: chroma.sqlite3
backend/fastApi/: prompt_coach.py  prompt_refiner.py  routes.py
backend/graphs/: coach.ipynb  refiner.ipynb
backend/models/: coachRequest.py  coachResponse.py  evaluation.py  refine_prompt.py  refinerRequest.py  refinerResponse.py
backend/tests/: streamlit_refiner_app.py  streamlite_app.py  test_coach_agent.py  test_refiner_agent.py
frontend/: README.md  index.html  package-lock.json  package.json  set.md  tailwind.config.js  vite.config.js
frontend/src/assets/styles/: HomeView.css  base.css  main.css
frontend/src/components/auth/: LoginForm.vue  RegisterForm.vue  index.js
frontend/src/components/base/: BaseButton.vue  BaseCard.vue  BaseInput.vue  BaseModal.vue  BaseSpinner.vue  index.js
frontend/src/components/chat/: ChatInput.vue  ChatInterface.vue  ChatMessage.vue  ChatMessageList.vue  CoachChatInterface.vue  (+4 more)
frontend/src/router/: index.js
frontend/src/service/: api.js
frontend/src/stores/: coaching.js  refiner.js
frontend/src/views/: CoachView.vue  CoachingView.vue  DocsView.vue  HomeView.vue  LoginView.vue  RefinerView.vue  RegisterView.vue  TutorialsView.vue  coachView.vue
(+7 files in other folders)
