[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langsmith>=0.4.16",
    "language-tool-python>=2.9.4",
    "playwright>=1.54.0",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings",
    "pytest>=8.4.1",
    "python-dotenv==1.1.1",
    "streamlit>=1.49.0",
    "tavily-python>=0.7.11",
]
